--- a/style.css
+++ b/style.css
@@ -6,12 +6,19 @@ html {
     border: 2px solid tomato;
 } */
 
+:root {
+    --background-color: hsl(0, 0%, 10%);
+    --shodow-color: hsl(0, 0%, 5%);
+    --border-color: hsl(0, 0%, 15%);
+    --text-color: hsl(0, 0%, 100%);
+}
+
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: hsl(0, 0%, 10%);
-    color: hsl(0, 0%, 100%);
+    background-color: var(--background-color);
+    color: var(--text-color);
     font-family: Poppins, Inter, Roboto, sans-serif;
     overflow-x: hidden;
     overflow-y: auto;
@@ -50,7 +57,36 @@ header a {
 }
 
 hr {
-    border-color: hsl(0, 0%, 50%);
+    border-color: var(--border-color);
+}
+
+.hero-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#img-container {
+    background-color: var(--border-color);
+    width: 70vw;
+    height: 40rem;
+    text-align: center;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 5rem;
+}
+
+#hero-img {
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 16/10;
+    border-radius: 5px;
+    filter: grayscale(100%);
+    border: 10px solid var(--shodow-color);
 }
 
 @media only screen and (max-width: 780px) {
@@ -77,5 +113,10 @@ hr {
         display: block;
         text-align: center;
         margin-top: 1rem;
+    }
+    #hero-header {
+        display: block;
+        text-align: center;
+        margin: 0 2rem;
     }
 }
