--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
 body {
     margin: 0;
     padding: 0;
+    padding-bottom: 5rem;
     box-sizing: border-box;
     background-color: var(--background-color);
     color: var(--text-color);
@@ -23,6 +24,10 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
     font-size: 1.6rem;
+}
+
+section {
+    margin: 2rem 0;
 }
 
 .icon-and-title {
@@ -67,9 +72,9 @@ hr {
     align-items: center;
 }
 
-#img-container {
+.img-container {
     background-color: var(--border-color);
-    width: 70vw;
+    width: calc(70vw - 4rem);
     height: 40rem;
     text-align: center;
     border-radius: 10px;
@@ -77,16 +82,65 @@ hr {
     justify-content: center;
     align-items: center;
     padding: 2rem 5rem;
+    overflow: hidden;
+    position: relative;
+    margin: 0 3rem;
 }
 
-#hero-img {
+.img-container .track {
+    position: absolute;
+    max-width: 100%;
+    height: 80%;
+    margin: 0;
+    display: flex;
+    justify-content: flex-start;
+    gap: 5rem;
+}
+
+.img-container img {
+    animation: scroll 10s linear infinite;
     max-width: 100%;
     height: 100%;
     object-fit: cover;
     aspect-ratio: 16/10;
     border-radius: 5px;
     filter: grayscale(100%);
-    border: 10px solid var(--shodow-color);
+    border: 7px solid var(--shodow-color);
+}
+
+@keyframes scroll {
+    from {
+        transform: translateX(0%);
+    }
+    to {
+        transform: translateX(calc(-300% - 15rem));
+    }
+}
+
+.video-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.video-section .video-container {
+    background-color: var(--border-color);
+    text-align: center;
+    padding: 1rem;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 0 3rem;
+}
+
+.video-section #video {
+    border-radius: 5px;
+    max-width: 100%;
+}
+
+.video-section h2 {
+    padding: 0 2rem;
+    text-align: center;
 }
 
 @media only screen and (max-width: 780px) {
@@ -109,14 +163,18 @@ hr {
 }
 
 @media only screen and (max-width: 500px) {
-    nav a:last-child {
+    nav a {
         display: block;
         text-align: center;
-        margin-top: 1rem;
+        margin: 1.5rem 0;
     }
     #hero-header {
         display: block;
         text-align: center;
         margin: 0 2rem;
+    }
+    .video-section h2 {
+        display: block;
+        text-align: center;
     }
 }
